# fantom

./: README.md  pyproject.toml
config/: template.yaml
experiments/: run_from_template.py
src/tomo/: __init__.py  run.py
src/tomo/data/: __init__.py  _data_classes.py  _datasets.py  _embedding.py
src/tomo/evaluation/: __init__.py  _coherence.py  _diversity.py
src/tomo/models/: __init__.py  _base_model.py  _berttopic.py  _ecrtm.py  _lda.py  _scholar.py  _vae.py
src/tomo/models/vae_helper/: __init__.py  _decoder.py  _encoder.py  _sampling.py
src/tomo/optim/: __init__.py  _loss.py  _scholar.py  _train.py  _vae.py
src/tomo/utils/: __init__.py
tests/: run_test.py  vae_tests.py
